--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x040C
 Name=French (Français)
-Version=2.8.5
+Version=2.8.6
 Author=Andex
 1=OK
 2=Annuler
@@ -43,9 +43,9 @@ Author=Andex
 7=&Rechercher les mises à jour automatiquement
 8= <a>Rechercher maintenant!</a>
 9=&Thème:
-10=Utiliser l'accélération &matérielle AES
+10=A&ctiver l'accélération matérielle AES
 11= <a>Test</a>
-12=Afficher une fenêtre d'&information pour les nouveaux médias
+12=A&fficher une fenêtre d'information pour les nouveaux médias
 
 [DIALOG_9]
 0=CD
@@ -88,7 +88,7 @@ Author=Andex
 
 [DIALOG_13]
 0=Lecteurs
-3=&Sélectionnez les lecteurs que vous souhaitez analyser par Xreveal:
+3=Sélectionnez les lecteurs que vous souhaitez analyser par Xreveal:
 5=&Désactiver l'exécution automatique des lecteurs
 8=&Activer LibreDrive pour les disques UHD
 
@@ -108,7 +108,7 @@ Author=Andex
 14=Créer un fichier de contrôle &MD5
 15=Créer un fichier &dvdid.xml
 16=Créer un fichier &journal
-17=Créer un fichier disc.met&aiso
+17=Créer un fichier disc.&metaiso
 18=Copier &seulement le dossier 'VIDEO_TS'
 19=Vérifier les &octets de synchronisation M2TS
 
@@ -128,9 +128,9 @@ Author=Andex
 0=Copie
 3=&Tentatives de lecture:
 4=&Abandonner lorsque le nombre d'erreurs ignorées dépasse:
-5=Copier le dossier 'SSIF' lors de la copie d'un Blu-ray *3D* dans un dossier
-6=Ajouter l'état du lecteur au journal de copie
-7=Afficher un avertissement lors de la création d'une image ISO protégée
+5=&Copier le dossier 'SSIF' lors de la copie d'un Blu-ray *3D* dans un dossier
+6=A&jouter l'état du lecteur au journal de copie
+7=A&fficher un avertissement lors de la création d'une image ISO protégée
 
 [DIALOG_18]
 0=Enregistrement de la licence Pro
@@ -150,7 +150,7 @@ Author=Andex
 [DIALOG_20]
 0=HD DVD
 3=&Activer la prise en charge des HD DVD
-4=Supprimer le 1er &titre lisible
+4=&Supprimer le 1er titre lisible
 5=Supprimer &UOPs (User Operation Prohibitions)
 6=Supprimer les &restrictions parentales
 
@@ -190,16 +190,16 @@ Author=Andex
 6=&Erreur:
 
 [DIALOG_28]
-0=Metafile submission
-1=&Submit
-3=Creating the disc metafile, please wait...
-4=Ajout de %s...
-5=<a>Submit manually?</a>
-6=Metafile:
+0=Envoi d'un fichier d'informations
+1=&Envoyer
+3=Création du fichier en cours, patienter SVP...
+4=Ajout de %s
+5=<a>Envoyer manuellement?</a>
+6=Fichier:
 7=Email:
-8=Comment:
-9=Uploading %s of %s
-10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
+8=Commentaire:
+9=Envoi de %s / %s
+10=Merci d'envoyer le fichier ci-dessus vers un site de partage comme '%s' puis d'<a>envoyer le lien de téléchargement</a>
 
 [DIALOG_29]
 0=Actions
@@ -218,7 +218,7 @@ Author=Andex
 3=Des paramètres ont été changés, voulez-vous rescanner le(s) lecteur(s)?
 
 [DIALOG_32]
-0=Certificat du lecteur
+0=Décodage du certificat AACS
 3=Type:
 4=Bus Encryption:
 5=Longueur:
@@ -236,7 +236,7 @@ Author=Andex
 6=Ignorer cette &version
 7=&Me le rappeler plus tard
 8=&Installer maintenant
-9=Téléchargement - %s / %s
+9=Téléchargement de %s / %s
 10=Vous êtes à jour :-)\n\n%s est actuellement la version la plus récente.
 11=Erreur lors de la recherche d'une mise à jour!\nRéessayez plus tard SVP...
 12=Erreur lors du téléchargement de la mise à jour!\nRéessayez plus tard SVP...
@@ -295,7 +295,7 @@ Author=Andex
 39=%C:\[%S]
 40=&Statut
 41=&Ouvrir dans l'explorateur Windows
-42=&Créer un fichier d'informations
+42=&Créer/envoyer un fichier d'informations
 43=Vérifier un BD/UHD...
 44=Copier dans un dossier...
 45=Copier en fichier ISO...
@@ -352,7 +352,7 @@ Author=Andex
 96=&Actualiser
 97=&Editer...
 98=&Importer un catalogue...
-99=&Export...
+99=
 100=Commentaire
 101=Fichier
 102=Dossier
@@ -388,7 +388,7 @@ Author=Andex
 132=%u%% terminé!
 133=Erreur de lecture sur le lecteur %C:!\nSecteurs: %u-%u
 134=Erreur de lecture %s!\nSecteurs: %u-%u
-135=Demande d'abandon reconnue!
+135=Copie abandonnée!
 136=Copie en cours...
 137=(Version Pro)
 138=Annuler la licence
@@ -415,6 +415,6 @@ Author=Andex
 159=Manque d'espace libre sur le lecteur de destination %C:!
 160=Action
 161=Rescanner
-162=Optional
-163=File submitted successfully, thank you!
-164=Close this window
+162=Optionnel
+163=Le fichier a été transmis avec succès, merci!
+164=Fermer cette fenêtre
