--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0407
 Name=German (Deutsch)
-Version=2.8.5
+Version=2.8.6
 Author=The Punisher
 1=OK
 2=Abbrechen
@@ -190,16 +190,16 @@ Author=The Punisher
 6=Fehlermeldung:
 
 [DIALOG_28]
-0=Metafile submission
-1=&Submit
-3=Creating the disc metafile, please wait...
+0=Metadatei-Übermittlung
+1=&Übermitteln
+3=Die Metadatei wird gerade erstellt, bitte haben Sie einen Moment Geduld...
 4=Erstelle %s...
-5=<a>Submit manually?</a>
-6=Metafile:
+5=<a>Manuell übermitteln ?</a>
+6=Metadatei:
 7=Email:
-8=Comment:
-9=Uploading %s of %s
-10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
+8=Anmerkung:
+9=Übermittelt %s von %s
+10=Laden Sie die Metadatei in einen File-Hoster wie z.B. %s hoch und bitte <a>schicken Sie uns anschließend den Downloadlink</a>.
 
 [DIALOG_29]
 0=Aktionen
@@ -416,5 +416,5 @@ Author=The Punisher
 160=Vorgang
 161=Erneut scannen
 162=Optional
-163=File submitted successfully, thank you!
-164=Close this window
+163=Die Datei wurde erfolgreich übermittelt, vielen Dank!
+164=Dieses Fenster schließen.
