--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -333,7 +333,7 @@ Author=Andex
 77=Type
 78=Taille
 79=Date
-80=Id. disque
+80=ID disque
 81=Ajouté le
 82=MKB
 83=Liste de lecture principale
@@ -344,15 +344,15 @@ Author=Andex
 88=VUK
 89=UK
 90=&Affichage
-91=&Supprimer '%s'
-92=Supprimer &tout
+91=Supprimer '%s'
+92=Supprimer tout
 93=Etes-vous sûr de vouloir supprimer '%s'?
 94=Etes-vous sûr de vouloir vider le catalogue?
 95=Cette fonctionnalité n'est disponible qu'en <a>version Pro</a>
-96=&Actualiser
-97=&Editer...
-98=&Importer un catalogue...
-99=
+96=Actualiser
+97=Editer...
+98=Importer...
+99=Exporter...
 100=Commentaire
 101=Fichier
 102=Dossier
