--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -1,6 +1,6 @@
 [INFO]
 ID=0x0402
-Name=Bulgarian(Български)
+Name=Bulgarian (Български)
 Version=2.8.0
 Author=jekovcar
 1=ОК
@@ -160,7 +160,7 @@ Author=jekovcar
 [DIALOG_22]
 1=Да
 2=Не
-3=Регистрация
+3=Надстройка до Pro
 4=Няма ключове за декриптиране в KeyDB.cfg. Ще пробвате ли облачната функцията за декриптиране?
 
 [DIALOG_23]
