--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -160,7 +160,7 @@ Author=Tanuki
 [DIALOG_22]
 1=是
 2=否
-3=注册
+3=升级至专业版
 4=在 KeyDB.cfg 中未找到密钥，是否在线查找密钥？
 
 [DIALOG_23]
@@ -190,16 +190,16 @@ Author=Tanuki
 6=错误声音:
 
 [DIALOG_28]
-0=Metafile submission
-1=&Submit
-3=Creating the disc metafile, please wait...
+0=元文件提交
+1=提交 (&S)
+3=正在创建光盘元文件，请稍候...
 4=提交 %s...
-5=<a>Submit manually?</a>
-6=Metafile:
-7=Email:
-8=Comment:
-9=Uploading %s of %s
-10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
+5=<a>手动提交?</a>
+6=文件:
+7=邮箱:
+8=描述:
+9=正在上传 %s / %s
+10=请将上述文件上传到像 %s 这样的文件托管网站，然后<a>提交下载链接</a>。
 
 [DIALOG_29]
 0=动作
@@ -250,7 +250,7 @@ Author=Tanuki
 0=反馈
 1=提交
 3=邮箱 (可选)
-4=请详细描述你遇到的问题
+4=请描述你遇到的问题
 
 [STRING]
 0=1 - 美国，加拿大
