--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -160,7 +160,7 @@ Author=The Punisher
 [DIALOG_22]
 1=Ja
 2=Nein
-3=Registrieren
+3=Upgrade auf Pro
 4=Es wurde keine passende Entschlüsselungsdatei in der KeyDB.cfg gefunden. Möchten Sie die Entschlüsselung in unserer Cloud versuchen ?
 
 [DIALOG_23]
