--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -160,7 +160,7 @@ Author=
 [DIALOG_22]
 1=Yes
 2=No
-3=Register
+3=Upgrade to Pro
 4=The disc key was not found in KeyDB.cfg. Do you want to find it online?
 
 [DIALOG_23]
@@ -197,7 +197,7 @@ Author=
 5=<a>Submit manually?</a>
 6=Metafile:
 7=Email:
-8=Comment:
+8=Description:
 9=Uploading %s of %s
 10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
 
