--- a/Xreveal_FIN.ini
+++ b/Xreveal_FIN.ini
@@ -160,7 +160,7 @@ Author=TJL
 [DIALOG_22]
 1=Yes
 2=No
-3=Register
+3=Päivitä Pro-versioon
 4=The disc key was not found in KeyDB.cfg. Do you want to find it online?
 
 [DIALOG_23]
