--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -160,7 +160,7 @@ Author=Andex
 [DIALOG_22]
 1=Oui
 2=Non
-3=Enregistrer...
+3=Passer à Pro
 4=Pas de clé de déchiffrement trouvée dans 'KeyDB.cfg'!\nVoulez-vous la rechercher en ligne?
 
 [DIALOG_23]
