--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -160,7 +160,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 [DIALOG_22]
 1=Ya
 2=Tidak
-3=Daftar
+3=Upgrade ke Pro
 4=Tidak ada key decryption yang ditemukan di KeyDB.cfg, Anda ingin untuk mengevaluasi fitur decryption awan?
 
 [DIALOG_23]
