--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -160,7 +160,7 @@ Author=bovirus (bovirus@gmail.com)
 [DIALOG_22]
 1=Sì
 2=No
-3=Registra
+3=Passa a Pro
 4=La chiave del disco non è stata trovata in KeyDB.cfg.\nVuoi provare la funzione Pro "Trova chiave online"?
 
 [DIALOG_23]
