--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -160,7 +160,7 @@ Author=Re*Index.(ot_inc)
 [DIALOG_22]
 1=はい
 2=いいえ
-3=登録
+3=プロにアップグレード
 4=KeyDB.cfg に復号化キーがありませんでした。クラウド復号化機能を使用しますか？
 
 [DIALOG_23]
