--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -160,7 +160,7 @@ Author=비너스걸 (VenusGirl)
 [DIALOG_22]
 1=예
 2=아니오
-3=등록
+3=프로로 업그레이드
 4=KeyDB.cfg에서 암호 해독 키를 찾을 수 없습니다. 클라우드 암호 해독 기능을 평가하시겠습니까?
 
 [DIALOG_23]
