--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -160,7 +160,7 @@ Author=jekovcar
 [DIALOG_22]
 1=Да
 2=Нет
-3=Регистрация
+3=Перейти на Pro
 4=Ключи расшифровки в KeyDB.cfg не найдены. Хотите оценить функцию облачного дешифрирования?
 
 [DIALOG_23]
