--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -160,7 +160,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 [DIALOG_22]
 1=Sí
 2=No
-3=Registrar
+3=Actualizar a Pro
 4=No se encontró la clave del disco en KeyDB.cfg. ¿Quieres buscarla en línea?
 
 [DIALOG_23]
