--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -160,7 +160,7 @@ Author=Harry Samwel, Sopor
 [DIALOG_22]
 1=Ja
 2=Nej
-3=Registrera
+3=Uppgradera till Pro
 4=Nyckeln till skivan hittades inte i KeyDB.cfg. Vill du söka på nätet?
 
 [DIALOG_23]
@@ -418,4 +418,3 @@ Author=Harry Samwel, Sopor
 162=Valfri
 163=Filen skickades, tack så mycket!
 164=Stäng detta fönster
-
