--- a/Xreveal_SLV.ini
+++ b/Xreveal_SLV.ini
@@ -160,7 +160,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 [DIALOG_22]
 1=Yes
 2=No
-3=Register
+3=Upgrade to Pro
 4=The disc key was not found in KeyDB.cfg. Do you want to find it online?
 
 [DIALOG_23]
