Update SPA to 2.8.6

--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x040A
 Name=Spanish (Español)
-Version=2.8.4
+Version=2.8.6
 Author=Steven Rogers, Leandro Botella Penalva
 1=Aceptar
 2=Cancelar
@@ -128,9 +128,9 @@ Author=Steven Rogers, Leandro Botella Penalva
 0=Copiador
 3=Número de reintentos de lectura:
 4=Abortar cuando los errores ignorados excedan :
-5=Copy SSIF folder while ripping Blu-ray 3D to folder
-6=Append the drive status content to the rip log
-7=Show warning when creating a protected image
+5=Copiar carpeta SSIF al copiar Blu-ray 3D a carpeta
+6=Agregar el contenido del estado de la unidad al registro de copiado
+7=Mostrar advertencia al crear una imagen protegida
 
 [DIALOG_18]
 0=Registrar Xreveal
@@ -190,16 +190,16 @@ Author=Steven Rogers, Leandro Botella Penalva
 6=Sonido de error:
 
 [DIALOG_28]
-0=Metafile submission
-1=&Submit
-3=Creating the disc metafile, please wait...
+0=Envio de metafile
+1=&Enviar
+3=Creando metafile del disco, por favor espera...
 4=Añadiendo %s...
-5=<a>Submit manually?</a>
+5=<a>¿Enviar manualmente?</a>
 6=Metafile:
 7=Email:
-8=Comment:
-9=Uploading %s of %s
-10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
+8=Comentario:
+9=Subiendo %s de %s
+10=Por favor, sube el archivo metafile a un alojamiento de archivos como %s, después <a>envía el enlace de descarga</a>.
 
 [DIALOG_29]
 0=Acciones
@@ -214,19 +214,19 @@ Author=Steven Rogers, Leandro Botella Penalva
 4=Código
 
 [DIALOG_31]
-0=Settings Change
-3=Settings have changed, do you want to rescan drives?
+0=Cambio de Ajustes
+3=Los ajustes han cambiado, ¿quieres rescanear las unidades?
 
 [DIALOG_32]
-0=AACS Certificate Decoder
-3=Type:
-4=Bus encryption:
-5=Length:
+0=Decodificador de Certificados AACS
+3=Tipo:
+4=Cifrado de bus:
+5=Longitud:
 6=ID:
-7=Reserved:
-8=Public key:
-9=Signature:
-10=Device number:
+7=Reservado:
+8=Clave pública:
+9=Firma:
+10=Número del dispositivo:
 
 [DIALOG_A]
 0=Actualización de Software
@@ -295,7 +295,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 39=%C:\[%S]
 40=&Estado
 41=&Abrir en el Explorador
-42=&Crear un archivo de volcado
+42=&Envio de metafile
 43=Verificador de Hash del Contenido
 44=Copiar a &Carpeta...
 45=Copiar a Archivo &ISO...
@@ -332,12 +332,12 @@ Author=Steven Rogers, Leandro Botella Penalva
 76=Etiqueta
 77=Tipo
 78=Tamaño
-79=Fecha
+79=Creado
 80=ID del Disco
-81=Fecha añadido
+81=Añadido
 82=MKB
 83=Lista de reproducción principal
-84=Fecha del BD+
+84=BD+ creado
 85=
 86=VID
 87=MK
@@ -352,7 +352,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 96=&Refrescar
 97=&Editar
 98=&Importar...
-99=&Export...
+99=&Exportar...
 100=Comentario
 101=Verificar ISO
 102=Verificar Carpeta
@@ -415,6 +415,6 @@ Author=Steven Rogers, Leandro Botella Penalva
 159=No hay espacio suficiente en la unidad de destino %C:!
 160=Acción
 161=Rescanear
-162=Optional
-163=File submitted successfully, thank you!
-164=Close this window
+162=Opcional
+163=Archivo enviado correctamente, ¡gracias!
+164=Cerrar esta ventana
