--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -1,8 +1,8 @@
 ﻿[INFO]
 ID=0x0415
 Name=Polish (Polski)
-Version=2.5.6
-Author=Fresta
+Version=2.8.6
+Author=Fresta, updated to 2.8.6 by adijos
 1=OK
 2=&Anuluj
 
@@ -38,14 +38,14 @@ Author=Fresta
 0=Ogólne
 3=Język:
 4=&Uruchom Xreveal z Windows
-5=Keep this window always on &top
+5=Zawsze utrzymuj to okno na wierzchu
 6=&Lista dysków w menu zasobnika systemowego
 7=&Sprawdzaj aktualizacje automatycznie
-8=<a>Check now</a>
-9=Theme:
-10=Using AES &hardware acceleration
-11=<a>Benchmark</a>
-12=Show &information window for new media
+8=<a>Sprawdź teraz</a>
+9=Motyw:
+10=Używanie AES i sprzętowej akceleracji
+11=<a>Test wydajności (Benchmark)</a>
+12=Wyświetl okno informacji dla nowych mediów
 
 [DIALOG_9]
 0=CD
@@ -53,7 +53,7 @@ Author=Fresta
 
 [DIALOG_10]
 0=DVD
-3=&Enable DVD support
+3=Włącz obsługę DVD
 4=Usuń RC (Kod regionu)
 5=Usuń RCE (Region Code Enhancement)
 6=Kod regionu dysku:
@@ -61,76 +61,76 @@ Author=Fresta
 8=Usuń UOPs (User Operation Prohibitions)
 9=Usuń ARccOS
 10=Przejrzystość Napisów
-11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
-12=Disable AutoRun
+11=Xreveal wymaga <a>libdvdcss-2.dll</a> aby odtworzyć DVD.
+12=Wyłącz autouruchamianie
 
 [DIALOG_11]
 0=BD / UHD
-3=&Enable Blu-ray support
+3=Włącz obsługę Blu-ray 
 4=Usuń BD+
 5=Usuń RC (Region Code)
 6=Kod regionu płyty:
-7=Remove &country code
+7=Usuń kod kraju
 8=Usuń UOPs (User Operation Prohibitions)
 9=Usuń CCI (Copy Control Information)
 10=Wyłącz BD-Live
 11=Symulacja podłączonego wyświetlacza 3D
-12=Rename AACS &folder to
-15=Remove &annoying adverts and trailers
-16=Remove video sequences &shorter than %s minutes
+12=Zmień nazwę folderu AACS na
+15=Usuń &irytujące reklamy i zwiastuny
+16=Usuń sekwensje wideo krótsze niż %s minut
 17=Przejrzystość Napisów
 
 [DIALOG_12]
 0=KeyDB
 3=Xreveal nie zawiera żadnego klucza deszyfrującego, do jego działania potrzebna jest baza danych kluczy. <a>Czytaj więcej</a>.
 4=Lokalizacja KeyDB.cfg:
-6=&Find keys online if not found locally
+6=&Znajdź klucz online, jeśli nie jest dostępny lokalnie
 
 [DIALOG_13]
-0=My Drives
-3=&Select drives that you want to scan by Xreveal.
-5=&Wyłącz Auto Uruchomianie i Odtwarzanie
+0=Moje Napędy
+3=&Wybierz napędy, które ma skanować Xreveal.
+5=&Wyłącz autouruchamianie i odtwarzanie
 8=Włącz &LibreDrive dla UHD
 
 [DIALOG_14]
-1=Start
-3=Source
-4=Destination
-5=Options
-6=Info
-7=Type:
+1=Start:
+3=Źródło:
+4=Cel:
+5=Opcje:
+6=Info:
+7=Typ:
 8=Rozmiar:
-9=Protection:
-10=Free space:
-11=Capacity:
-12=&Keep protection
-13=Verify content &hash
-14=Create &MD5 checksum file
-15=Create &dvdid.xml
-16=Create log file
-17=Create disc.&metaiso
-18=Copy only &VIDEO_TS folder
-19=Verify &M2TS sync bytes
+9=Zabezpieczenie:
+10=Wolne miejsce:
+11=Pojemność:
+12=&Zachowaj zabezpieczenie
+13=Sprawdz &hash zawartości
+14=Stwórz sumę kontrolną &MD5 
+15=Stwórz &dvdid.xml
+16=Stwórz plik logów
+17=Stwórz dysk.&metaiso
+18=Kopiuj jedynie folder &VIDEO_TS
+19=Zweryfikuj bajty synchronizacji &M2TS 
 
 [DIALOG_15]
 0=Xreveal
-3=Source:
-4=Destination:
-6=Time elapsed:
-7=Time remaining:
-8=Read errors:
-9=Read rate:
+3=Źródło:
+4=Cel:
+6=Czas, który upłynął:
+7=Czas pozostały:
+8=Błędy odczytu:
+9=Szybkość odczytu:
 
 [DIALOG_16]
 0=Region odtwarzacza
 
 [DIALOG_17]
-0=Ripper
-3=Read retry count:
-4=Abort when ignored errors exceed :
-5=Copy SSIF folder while ripping Blu-ray 3D to folder
-6=Append the drive status content to the rip log
-7=Show warning when creating a protected image
+0=Zgrywanie
+3=Liczba ponownych prób odczytu:
+4=Przerwij, gdy liczba zignorowanych błędów przekroczy :
+5=Skopiuj folder SSIF podczas zgrywania Blu-ray 3D do folderu
+6=Dołącz zawartość statusu dysku do dziennika zgrywania
+7=Pokaż ostrzeżenie podczas tworzenia nieodszyfrowanego obrazu
 
 [DIALOG_18]
 0=Zarejestruj Xreveal
@@ -138,95 +138,95 @@ Author=Fresta
 4=Wklej otrzymany klucz licencyjny w polu poniżej.
 
 [DIALOG_19]
-0=Hotkeys
-3=You can create system-wide hotkeys to trigger some actions while Xreveal is running.
-4=Show Xreveal system tray menu:
-5=Show settings window:
-6=Enable/Disable Xreveal:
-7=Rip to ISO file:
-8=Rip to folder:
-9=Content Hash Verifier:
+0=Skróty klawiszowe
+3=Utwórz skr. klaw. dla całego systemu, by uruchamiać określone działania, kiedy Xreveal działa.
+4=Pokaż menu paska systemowego Xreveal:
+5=Pokaż okno ustawień:
+6=Włącz/Wyłącz Xreveal:
+7=Zgraj do pliku ISO:
+8=Zgraj do folderu:
+9=Weryfikacja hash zawartości:
 
 [DIALOG_20]
 0=HD DVD
-3=&Enable HD DVD support
+3=&Włącz obsługę dysków HD DVD
 4=Usuń tytuł pierwszego odtwarzania
 5=Usuń UOPs (User Operation Prohibitions)
 6=Usuń ograniczenia rodzicielskie
 
 [DIALOG_21]
-0=My Discs
+0=Moje Dyski
 
 [DIALOG_22]
-1=Yes
-2=No
-3=Upgrade to Pro
-4=The disc key was not found in KeyDB.cfg. Do you want to find it online?
+1=Tak
+2=Nie
+3=AKtualizacja do Pro
+4=Klucz dysku nie został znaleziony w KeyDB.cfg. Chcesz poszukać go online?
 
 [DIALOG_23]
-0=Disc Information
+0=Informacje o dysku
 
 [DIALOG_24]
-0=Drive Information
-12=Default value (%s)
-13=Force yes
-14=Force no
-15=Global value (%s)
-16=Enable
-17=Disable
+0=Informacje o napędzie
+12=Domyślna wartość (%s)
+13=Wymuś tak
+14=Wymuś nie
+15=Wartość globalna (%s)
+16=Włączone
+17=Wyłączone
 
 [DIALOG_25]
-0=Import...
-3=Please specify or drag the source keydb.db to import into <a>%s</a>.
+0=Importuj...
+3=Wskaż lub przeciągnij źródłowy plik keydb.cfg, aby go zaimportować <a>%s</a>.
 
 [DIALOG_26]
-0=Content Hash Verifier
+0=Zweryfikuj hash zawartości
 
 [DIALOG_27]
-0=Sounds
-3=Play sound after opening disc
-4=Play sound after ripping disc
-5=Success sound:
-6=Error sound:
+0=Dźwięki
+3=Odtwórz dźwięk po odtworzeniu dysku
+4=Odtwórz dźwięk po zgraniu dysku
+5=Dźwięk po powodzeniu:
+6=Dźwięk po błędzie:
 
 [DIALOG_28]
-0=Metafile submission
-1=&Submit
-3=Creating the disc metafile, please wait...
-4=Adding %s...
-5=<a>Submit manually?</a>
-6=Metafile:
+0=Przesyłanie plików meta
+1=&Prześlij
+3=Tworzenie pliku meta, proszę czekać...
+4=Dodawanie %s...
+5=<a>Przesłać ręcznie?</a>
+6=Plik meta:
 7=Email:
-8=Comment:
-9=Uploading %s of %s
-10=Please upload the above metafile to a file host like %s, then <a>submit the download link</a>.
+8=Komentarz:
+9=Wysyłanie %s z %s
+10=Proszę przesłać powyższy plik meta do serwisu hostingowego plików, takiego jak %s, następnie <a>prześlij link do pobrania</a>.
 
 [DIALOG_29]
-0=Actions
-3=Post-Scan action
-4=Specify a command to run after opening disc. <a>Supported macros</a>.
-5=Post-Rip action
-6=Specify a command to run after ripping disc. <a>Supported macros</a>.
+0=Akcje
+3=Działania po skanowaniu
+4=Określ polecenie, które ma zostać uruchomione po otwarciu płyty. <a>Wspierane makra</a>.
+5=Akcja po zgrywaniu
+6=Określ polecenie, które ma zostać uruchomione po zgraniu płyty. <a>Wspierane makra</a>.
 
 [DIALOG_30]
-0=Country code
-3=Country
-4=Code
+0=Kod kraju
+3=Kraj
+4=Kod
 
 [DIALOG_31]
-0=Settings Change
-3=Settings have changed, do you want to rescan drives?
+0=Zmiana ustawień
+3=Ustawienia uległy zmianie, czy chcesz ponownie przeskanować dyski?
 
 [DIALOG_32]
-0=AACS Certificate Decoder
-3=Type:
-4=Bus encryption:
-5=Length:
+0=Dekoder certyfikatów AACS
+3=Typ:
+4=Szyfrowanie magistrali:
+5=Długość:
 6=ID:
-7=Reserved:
-8=Public key:
-9=Signature:
-10=Device number:
+7=Zarezerwowany:
+8=Klucz publiczny:
+9=Sygnatura:
+10=Numer urządzenia:
 
 [DIALOG_A]
 0=Aktualizacja
@@ -236,7 +236,7 @@ Author=Fresta
 6=Pomiń tę wersję
 7=Przypomnij mi później
 8=Zainstaluj aktualizację
-9=Pobieranie - %s of %s
+9=Pobieranie - %s z %s
 10=Jesteś na bieżąco!\n\n%s jest obecnie najnowszą dostępną wersją.
 11=Wystąpił błąd podczas pobierania informacji o aktualizacji. Spróbuj ponownie później.
 12=Wystąpił błąd podczas pobierania aktualizacji. Spróbuj ponownie później.
@@ -250,7 +250,7 @@ Author=Fresta
 0=Opinia
 1=Wyślij
 3=Twój adres e-mail (opcjonalnie)
-4=Proszę wyjaśnić błędu lub problemu.
+4=Proszę wyjaśnić błąd lub problem.
 
 [STRING]
 0=1 - USA, Kanada
@@ -261,7 +261,7 @@ Author=Fresta
 5=6 - Chiny
 6=7 - Zastrzeżone
 7=8 - Specjalne miejsca międzynarodowe (samoloty, statki wycieczkowe itp.)
-8=A - Ameryka Północna, Ameryka Środkowa, Ameryka Południowa, Korea, Japonia, Azja Południowo-Wschodnia
+8=A - Wszystkie Ameryki i terytoria USA, Korea, Japonia, Azja Południowo-Wschodnia
 9=B - Europa, Bliski Wschód, Afryka, Australia, Nowa Zelandia
 10=C - Rosja, Indie, Chiny, reszta Świata
 11=Zapytaj przed otwarciem dysku
@@ -274,18 +274,18 @@ Author=Fresta
 18=Xreveal nie będzie działał, jeśli %s jest uruchomiony.\n\nChcesz go zamknąć?
 19=Xreveal skanuje napęd %C:
 20=Włożony dysk będzie wkrótce dostępny, proszę czekać!
-21=Xreveal is not active for drive %C:!\n\nIn order to rip a copy-protected disc, Xreveal must be active for the drive.
-22=Directory '%s' has not enough space!\nYou need an additional %s.
+21=Xreveal nie jest aktywny dla napędu %C:!\n\nAby skopiować płytę zabezpieczoną przed kopiowaniem, program Xreveal musi być aktywny dla danego napędu.
+22=W katalogu '%s' nie ma wystarczającej ilości miejsca!\nPotrzebujesz dodatkowego %s.
 23=Kopiowanie %s...
 24=%.1f MB/s
-25=Operation completed successfully!
+25=Operacja zakończona powodzeniem!
 26=Xreveal nie mógł znaleźć klucza deszyfrującego w KeyDB.cfg
 27=Strona &domowa
-28=Failed to open disc, error code: %s.
+28=Błąd podczas odczytu pliku, kod błędu: %s.
 29=Napęd
 30=Sprzedawca
 31=Produkt
-32=Rewizja
+32=Wersja oprogramowania
 33=Specyfika
 34=Numer seryjny
 35=N/A
@@ -294,11 +294,11 @@ Author=Fresta
 38=%C:
 39=%C:\[%S]
 40=&Status
-41=&Open in Explorer
-42=&Metafile submission
-43=&Content Hash Verifier
+41=&Otwórz w Eksploratorze
+42=&Zgłoszenie pliku meta
+43=&Weryfikacja Hash Zawartości
 44=Zgraj na &Dysk Twardy...
-45=Zgraj do &Obrazu...
+45=Zgraj do &Obrazu ISO...
 46=&Włącz Xreveal
 47=&Wyłącz Xreveal
 48=&Ustawienia...
@@ -313,7 +313,7 @@ Author=Fresta
 57=Ten program jest darmowy.\n\nJeśli ten program jest dla Ciebie przydatny, możesz przekazać <a>darowiznę</a>, aby pomóc nam go ulepszyć.
 58=%s już istnieje.\nCzy chcesz to zastąpić?
 59=Czy na pewno chcesz anulować?
-60=Your license has expired on %s.
+60=Twoja licencja wygasła %s.
 61=Odtwarzacz
 62=Region
 63=Zmian pozostało
@@ -329,92 +329,92 @@ Author=Fresta
 73=Zresetować WSZYSTKIE opcje do wartości domyślnych?\n\nKliknięcie 'Nie' spowoduje zresetowanie bieżących opcji strony.
 74=RowID
 75=Status
-76=Label
-77=Type
+76=Etykieta
+77=Typ
 78=Rozmiar
-79=Date
-80=Disc ID
-81=Date added
+79=Data
+80=ID dysku
+81=Data dodania
 82=MKB
-83=Main playlist
-84=BD+ date
+83=Główna playlista
+84=BD+ data
 85=
 86=VID
 87=MK
 88=VUK
 89=UK
-90=&View
-91=&Delete "%s"
-92=Delete &All
-93=Are you sure you want to delete "%s"?
-94=Are you sure you want to delete all records?
-95=This feature is only available in the <a>Pro version</a>.
+90=&Pokaż
+91=&Usuń "%s"
+92=Usuń &Wszystko
+93=Czy na pewno chcesz usunąć? "%s"?
+94=Czy na pewno chcesz usunąć wszystkie wpisy?
+95=Ta funkcja jest dostępna tylko w <a>wersji Pro</a>.
 96=&Odśwież
-97=&Edit
-98=&Import...
-99=&Export...
-100=Comment
-101=Verify ISO
-102=Verify Folder
-103=Verify Drive
-104=Bus encryption capable
-105=%s (Drive: %s)
-106=Open Log Folder
-107=Options
-108=Verbose output
-109=Command line version (Windows/macOS/Linux)
-110=Abort
-111=Vendor specific
-112=Directory %s doesn't exist. Do you want to create it?
-113=When done: 
-114=Do nothing
+97=&Edytuj
+98=&Importuj...
+99=&Eksportuj...
+100=Komentarz
+101=Zweryfikuj ISO
+102=Zweryfikuj Folder
+103=Zweryfikuj Napęd
+104=Obsługa szyfrowania magistrali
+105=%s (Napęd: %s)
+106=Otwórz folder logów
+107=Opcje
+108=Szczegółowe dane wyjściowe
+109=Linia komend (Windows/macOS/Linux)
+110=Przerwij
+111=Specyfika dostawcy (vendora)
+112=Katalog %s nie istnieje. Czy chcesz go utworzyć?
+113=Po zakończeniu 
+114=Nic nie rób
 115=, 
-116=Eject disc
-117=Play sound
-118=Quit Xreveal
-119=No action
-120=Shutdown
-121=Sleep
-122=Hibernate
-123=Lock system
-124=Log off
-125=All Files
-126=ISO Files
-127=WAV Files
-128=KeyDB Files
-129=Database Files
-130=Select or drop the WAV file here
-131=Select or drop the KeyDB.cfg here
-132=%u%% complete
-133=Error reading from drive %C:!\nSectors: %u-%u
-134=Error reading %s!\nSectors: %u-%u
-135=Aborted!
-136=Copying...
-137=Pro feature
-138=Unregister
-139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed, and running!\n\nDo you want to continue?
-140=Delete incomplete file?\n\n%s
-141=Light
-142=Dark
+116=Wysuń dysk
+117=Odtwórz dźwięk
+118=Wyjdz z aplikacji Xreveal
+119=Brak akcji
+120=Zamknij
+121=Uśpij
+122=Hibernuj
+123=Zablokuj
+124=Wyloguj
+125=Wszystkie pliki
+126=Pliki ISO
+127=Pliki WAV
+128=Pliki KeyDB
+129=Pliki bazy danych
+130=Wybierz lub upuść plik WAV tutaj
+131=Wybierz lub upuść plik KeyDB.cfg tutaj
+132=%u%% ukończono
+133=Błąd odczytu z dysku %C:!\nSectors: %u-%u
+134=Błąd odczytu %s!\nSectors: %u-%u
+135=Przerwano!
+136=Kopiowanie...
+137=Funkcja Pro
+138=Wyrejestruj
+139=Zamierzasz utworzyć zasyfrowany (chroniony) plik obrazu. Plik można odczytać tylko z dysku wirtualnego, jeśli Xreveal jest zainstalowany i uruchomiony!\n\nChcesz kontynuować?
+140=Usunąć niekompletny plik?\n\n%s
+141=Jasny
+142=Ciemny
 143=System
-144=(%u retries)
-145=Pause the operation
-146=Resume the operation
+144=(%u ponownych prób)
+145=Wstrzymaj operację
+146=Wznów operację
 147=Programy
 148=Busy
-149=&Check for updates
-150=&Save...
-151=Enable LibreDrive
-152=Drive certificate
-153=Enable
-154=Disable
-155=Paused
-156=Infinity
-157=Are you sure you want to unregister?
-158=No drives are scanned by Xreveal! You can change the settings in <a>My Drives</a>.
-159=There is no enough space on destination drive %C:!
-160=Action
-161=Rescan
-162=Optional
-163=File submitted successfully, thank you!
-164=Close this window
+149=&Sprawdź aktualizacje
+150=&Zapisz...
+151=Włącz LibreDrive
+152=Certyfikat napędu
+153=Włączone
+154=Wyłączone
+155=Wstrzymano
+156=Nieskończoność
+157=Czy na pewno chcesz wyrejestrować?
+158=Xreveal nie zeskanował żadnych napędów! Możesz zmienić ustawienia w <a>Moje Napędy</a>.
+159=Na dysku docelowym nie ma wystarczającej ilości miejsca. %C:!
+160=Akcja
+161=Skanuj ponownie
+162=Opcjonalne
+163=Plik przesłany pomyślnie, dziękujemy!
+164=Zamknij to okno
